syntax = "proto3";

option go_package = "./service";

package service;

message Message {
    string body = 1;
    int32 lamportTimestamp =2;
    string clientName =3;
    int32 counter = 4;
}

message AddMessage{
    string port = 1;
    int32 lamportTimestamp =2;
    string ClientName =3;
}

message Empty{
}

message Acknowledgment {
    bool succes = 1;
    int32 lamport = 2;
}

service ChatClientService {
    rpc Publish(Message) returns (Message);
    rpc AddClient(AddMessage) returns (Acknowledgment);
    rpc Heartbeat(Empty) returns (Acknowledgment);
}

service BroadcastService{
    rpc Broadcast(Message) returns (Empty);
}